EIP1-6431 EMS Integration - Add new endpoint
