# src/main/kotlin/uk/gov/dluhc/emsintegrationapi/rest/PostalVoteApplicationController.kt
@@ -9,6 +9,8 @@ import org.springframework.web.bind.annotation.CrossOrigin
 import org.springframework.web.bind.annotation.DeleteMapping
 import org.springframework.web.bind.annotation.GetMapping
 import org.springframework.web.bind.annotation.PathVariable
+import org.springframework.web.bind.annotation.PostMapping
+import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestMapping
 import org.springframework.web.bind.annotation.RequestParam
 import org.springframework.web.bind.annotation.ResponseStatus
@@ -18,8 +20,11 @@ import uk.gov.dluhc.emsintegrationapi.constants.ApplicationConstants.Companion.A
 import uk.gov.dluhc.emsintegrationapi.constants.ApplicationConstants.Companion.APPLICATION_ID_REGEX
 import uk.gov.dluhc.emsintegrationapi.constants.ApplicationConstants.Companion.IS_AUTHENTICATED
 import uk.gov.dluhc.emsintegrationapi.constants.ApplicationConstants.Companion.PAGE_SIZE_PARAM
+import uk.gov.dluhc.emsintegrationapi.models.EMSApplicationResponse
+import uk.gov.dluhc.emsintegrationapi.models.EMSApplicationStatus
 import uk.gov.dluhc.emsintegrationapi.models.PostalVoteApplications
 import uk.gov.dluhc.emsintegrationapi.service.PostalVoteApplicationService
+import javax.validation.Valid
 import javax.validation.constraints.Pattern
 
 private val logger = KotlinLogging.logger { }
@@ -49,6 +54,7 @@ class PostalVoteApplicationController(private val postalVoteApplicationService: 
     @DeleteMapping("/{id}")
     @PreAuthorize(IS_AUTHENTICATED)
     @ResponseStatus(HttpStatus.NO_CONTENT)
+    @Deprecated("Replaced by postalvotes/id method post")
     fun emsAccepted(
         authentication: Authentication,
         @PathVariable(name = APPLICATION_ID)
@@ -57,6 +63,22 @@ class PostalVoteApplicationController(private val postalVoteApplicationService: 
     ) {
         val serialNumber = authentication.credentials.toString()
         logger.info { "Processing EMS confirmation of a postal vote application with id $applicationId and certificate serial no=$serialNumber" }
-        postalVoteApplicationService.confirmReceipt(serialNumber, applicationId)
+        val request = EMSApplicationResponse(status = EMSApplicationStatus.SUCCESS)
+        postalVoteApplicationService.confirmReceipt(serialNumber, applicationId, request)
+    }
+
+    @PostMapping("/{id}")
+    @PreAuthorize(IS_AUTHENTICATED)
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    fun emsApplicationAccepted(
+        authentication: Authentication,
+        @PathVariable(name = APPLICATION_ID)
+        @Pattern(regexp = APPLICATION_ID_REGEX, message = APPLICATION_ID_ERROR_MESSAGE)
+        applicationId: String,
+        @Valid @RequestBody request: EMSApplicationResponse
+    ) {
+        val serialNumber = authentication.credentials.toString()
+        logger.info { "Processing EMS confirmation of a postal vote application with id $applicationId, certificate serial no=$serialNumber and EMS status ${request.status}" }
+        postalVoteApplicationService.confirmReceipt(serialNumber, applicationId, request)
     }
 }
