# src/main/resources/openapi/EMSIntegrationAPIs.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.0
 info:
   title: EROP EMS Integration APIs for Postal and Proxy Vote Applications (OAVA)
-  version: 1.1.1
+  version: 1.1.2
   description: |
     This specification is for an API hosted by EROP for EMS clients to fetch
     details of Postal Vote and Proxy Vote applications made by the public.
@@ -103,11 +103,14 @@ paths:
         name: id
         in: path
         required: true
-    delete:
-      summary: -|
-        Confirmation from EMS systems that a Postal Vote application has been received and processed.
-        Successful responses will indicate the application will be removed from the LA/VJB/EMS's queue.
-      operationId: delete-postal-votes-id
+    post:
+      summary:
+        Confirmation from EMSs that the Postal Vote application has been received and should be
+        removed from the queue. The EMS can indicate if processing was successful or failed to update the elector's
+        details - or any other failure in processing. Error responses will alert the determining ERO officer of the failure.
+      operationId: post-postal-votes-id
+      requestBody:
+        $ref: '#/components/requestBodies/EMSApplicationResponse'
       responses:
         '204':
           description: No Content
@@ -115,10 +118,39 @@ paths:
           description: Not Found
       tags:
         - Postal Votes
-      description: |-
-        Postal vote applications that are acknowledged in this way will be removed from the queue immediately, and marked that the EMS has successfully recieved and committed the application within their corresponding EMS.
-
-        If the specified ID does not exist, or belongs to a Postal Vote application that is not for the currently connected ERO, then the response will be an “HTTP 404 Not Found” response.
+      description:
+        Postal vote applications acknowledged will be removed from the queue immediately,
+        
+        If the specified ID does not exist, or belongs to a Postal Vote application that is not for the currently connected ERO,
+        then the response will be an “HTTP 404 Not Found” response.
+      security:
+        - emsCertificateLambdaAuthorizer: [ ]
+      x-amazon-apigateway-integration:
+        type: HTTP_PROXY
+        uri: '${base_uri}/postalvotes/{id}'
+        requestParameters:
+          integration.request.header.client-cert-serial: context.authorizer.client-cert-serial
+        connectionType: VPC_LINK
+        connectionId: '${vpc_connection_id}'
+        httpMethod: POST
+    delete:
+      summary: -|
+        Deprecated, please use POST endpoint to return success and failure responses.
+        Confirmation from EMSs that the Postal Vote application has been received and should be
+        removed from the queue.
+      operationId: delete-postal-votes-id
+      deprecated: true
+      responses:
+        '204':
+          description: No Content
+        '404':
+          description: Not Found
+      tags:
+        - Postal Votes
+      description:
+        Postal vote applications acknowledged will be removed from the queue immediately,
+        If the specified ID does not exist, or belongs to a Postal Vote application that is not for the currently connected ERO,
+        then the response will be an “HTTP 404 Not Found” response.
       security:
         - emsCertificateLambdaAuthorizer: []
       x-amazon-apigateway-integration:
@@ -155,7 +187,7 @@ paths:
           integration.request.header.client-cert-serial: context.authorizer.client-cert-serial
         connectionType: VPC_LINK
         connectionId: '${vpc_connection_id}'
-        httpMethod: GET
+        httpMethod: DELETE
   '/proxyvotes/{id}':
     parameters:
       - schema:
@@ -613,14 +645,14 @@ components:
         - authorisingStaffId
         - detail
     ApplicationStatus:
-      title: ApplicationStatus
+      title: Application Status
       description: Enum indicating if an application is approved or rejected.
       type: string
       enum:
         - approved
         - rejected
     ApplicationLanguage:
-      title: ApplicationLanguage
+      title: Application Language
       description: Enum indicating “en” or “cy” according to which language the applicant used
       type: string
       enum:
@@ -646,6 +678,29 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/PostalVote'
+    EMSApplicationResponse:
+      title: EMS Application Processing Response
+      description: The EMSs response indicating success or failure processing the application.
+      type: object
+      properties:
+        status:
+          $ref: '#/components/schemas/EMSApplicationStatus'
+        message:
+          type: string
+          description: ERO friendly summary of processing status. Primarily intended for error conditions.
+        details:
+          type: string
+          description: Detailed description of processing status.
+      required:
+        - status
+    EMSApplicationStatus:
+      title: EMS Application Status
+      description: Indicates if the EMS succeeded or failed updating the application's Elector details.
+      type: string
+      default: success
+      enum:
+        - success
+        - failure
   responses:
     PostalVoteApplications:
       description: Determined Postal Vote applications
@@ -659,6 +714,13 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ProxyVoteApplications'
+  requestBodies:
+    EMSApplicationResponse:
+      description: The EMSs response indicating success or failure processing the application.
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/EMSApplicationResponse'
   securitySchemes:
     emsCertificateLambdaAuthorizer:
       type: 'apiKey'
